# client-scratch

./: hands_detector.py  pyproject.toml  server.py
