[tool.poetry]
name = "client"
version = "0.1.0"
description = ""
authors = ["Arkadiusz Karbowski <arkadiusz.karbowski.99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.10.0.82"
mediapipe = "^0.10.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
